[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = { git = "https://github.com/cart/bevy.git", branch = "bevy_asset_v2", features = ["jpeg"] }
ron = "0.8.0"
serde = "1.0.160"
